[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dodo_kedro"
version = "0.0.0"
description = "A collection of custom datasets and hooks for Kedro projects."
authors = [{name = "Marc GRIS", email = "marc@dodobird.ai"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "kedro>=0.19.1"
]

[tool.setuptools]
packages = ["find:", {"where": ["src"]}]

[project.urls]
homepage = "https://www.dodobird.ai"
repository = "https://github.com/dodobird-ai/tools-kedro"
